--- a/index.html
+++ b/index.html
@@ -2,257 +2,272 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./img/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./sidebar/sidebar.css">
+  <link rel="icon" href="./img/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-          href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
-          rel="stylesheet"
-        />
-        <link
-          rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0"
-        />
-        <link
-          href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-          rel="stylesheet"
-        />
-        <script src="https://unpkg.com/akar-icons-fonts"></script>
-    <title>Nexus Studium</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <script src="https://unpkg.com/akar-icons-fonts"></script>
+  <title>Nexus Studium</title>
 </head>
 
 <body>
-    <aside class="sidebar ocult-sidebar">
-        <header class="flex">
-          <img src="./img/logomarca-png.png" width="150px" height="150px"/>
-        </header>
-        <ul>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-home-alt1"></i>
-              <p>Início</p>
-            </button>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-dashboard"></i>
-              <p>Quem eu sigo</p>
-            </button>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-gear"></i>
-              <p>Artigos</p>
-              <i class="ai-chevron-down-small"></i>
-            </button>
-            <div class="sub-menu">
-              <ul>
-                <li>
-                  <button type="button">Display</button>
-                </li>
-                <li>
-                  <button type="button">Appearance</button>
-                </li>
-                <li>
-                  <button type="button">Preferences</button>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-folder-add"></i>
-              <p>Exercícios</p>
-              <i class="ai-chevron-down-small"></i>
-            </button>
-            <div class="sub-menu">
-              <ul>
-                <li>
-                  <button type="button">Article</button>
-                </li>
-                <li>
-                  <button type="button">Document</button>
-                </li>
-                <li>
-                  <button type="button">Video</button>
-                </li>
-                <li>
-                  <button type="button">Presentation</button>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-person"></i>
-              <p>Comunidade</p>
-              <i class="ai-chevron-down-small"></i>
-            </button>
-            <div class="sub-menu">
-              <ul>
-                <li>
-                  <button type="button">Avatar</button>
-                </li>
-                <li>
-                  <button type="button">Theme</button>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-bell"></i>
-              <p>Histórico</p>
-            </button>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-cart"></i>
-              <p>Trilhas Favoritas</p>
-            </button>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-lock-on"></i>
-              <p>Progresso</p>
-            </button>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-lock-on"></i>
-              <p>Ajuda</p>
-            </button>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-lock-on"></i>
-              <p>Feedback</p>
-            </button>
-          </li>
-          <li>
-            <button type="button" onclick="onClick(this)">
-              <i class="ai-lock-on"></i>
-              <p>Idiomas</p>
-            </button>
-          </li>
-        </ul>
-      </aside>
-    <header>
-        <nav>
-            <ul class="nav flex">
-                <li class="nav-btn flex"><img id="showMenu" src="../img/logomarca-png.png" alt="Logomarca NexusStudium" width="100px">
-                </li>
-                <li class="search-bar">
-                    <div>
-                        <form class="bg-search">
-                            <button title="btn" class="search-button" type="submit"><i class="search-icon"><img
-                                        src="../img/searchIcon.svg" alt=""></i></button>
-                            <input class="search-input" type="text" placeholder="O que você quer aprender?">
-                        </form>
-                    </div>
-                </li>
-                <li class="button-header">
-                    <div>
-                        <button type="button" id="openModalBtn">login</button>
-                        <button type="button">cadastre-se</button>
-                    </div>
-                </li>
-            </ul>
-        </nav>
+  <aside class="sidebar ocult-sidebar">
+    <header class="flex">
+      <img src="./img/logomarca-png.png" width="150px" height="150px" />
     </header>
-    <main class="grid-container">
-        <div class="container">
-            <div class="panel flex">
-                <h3 class="carrossel-title">Artigos</h3>
-                <p class="carrossel-sub">Aprenda através de textos feitos pela comunidade</p>
-            </div>
-            <div class="panel flex">
-                <h3 class="carrossel-title">Exercícios</h3>
-                <p class="carrossel-sub">Pratique seus conhecimentos através de exercícios</p>
-                
-            </div>
-            <div class="panel flex active">
-                <h3 class="carrossel-title">Trilha</h3>
-                <p class="carrossel-sub">Se desenvolva através de um caminho pré-definido por profissionais experientes
-                </p>
-            </div>
-            <div class="panel flex">
-                <h3 class="carrossel-title">Comunidade</h3>
-                <p class="carrossel-sub">Retire suas dúvidas e expanda seus conhecimentos com auxilio de outros usuários
-                </p>
-
-            </div>
-            <div class="panel flex">
-                <h3 class="carrossel-title">Em alta</h3>
-                <p class="carrossel-sub">Busque os vídeos e trilhas mais vistos</p>
-
-            </div>
+    <ul>
+      <li>
+        <a href="./login-page/index.html"><button type="button" onclick="onClick(this)">
+            <i class="ai-home-alt1"></i>
+            <p>Início</p>
+          </button></a>
+      </li>
+      <li>
+        <a href="./user/who-follow/index.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-person-check"></i>
+            <p>Quem eu sigo</p>
+          </button>
+        </a>
+      </li>
+      <li>
+        <button type="button" onclick="onClick(this)">
+          <i class="ai-book-open"></i>
+          <p>Artigos</p>
+          <i class="ai-chevron-down-small"></i>
+        </button>
+        <div class="sub-menu">
+          <ul>
+            <li>
+              <button type="button">Display</button>
+            </li>
+            <li>
+              <button type="button">Appearance</button>
+            </li>
+            <li>
+              <button type="button">Preferences</button>
+            </li>
+          </ul>
         </div>
-
-        <aside class="topics">
-            <div class="gp-1">
-                <div class="topic-btn">ENEM</div>
-                <div class="topic-btn">Programação</div>
-                <div class="topic-btn">Gastronomia</div>
-            </div>
-            <div class="gp-2">
-                <div class="topic-btn">Arquitetura</div>
-                <div class="topic-btn">Direito</div>
-                <div class="topic-btn">Mecânica</div>
-            </div>
-            <div class="gp-3">
-                <div class="topic-btn">Engenharia</div>
-                <div class="topic-btn">Medicina</div>
-                <div class="topic-btn">Idiomas</div>
-            </div>
-        </aside>
-    </main>
-
-    <footer>
-        <div class="links">
-            <div class="help-footer">
-                <a href="#">Ajuda - Perguntas Frequentes</a>
-            </div>
-            <div class="payment-footer">
-                <a href="#">Formas de Pagamento</a>
-            </div>
-            <div class="social-media-footer">
-                <a href="#">Contatos e Redes Sociais</a>
-            </div>
+      </li>
+      <li>
+        <button type="button" onclick="onClick(this)">
+          <i class="ai-folder-add"></i>
+          <p>Exercícios</p>
+          <i class="ai-chevron-down-small"></i>
+        </button>
+        <div class="sub-menu">
+          <ul>
+            <li>
+              <button type="button">Article</button>
+            </li>
+            <li>
+              <button type="button">Document</button>
+            </li>
+            <li>
+              <button type="button">Video</button>
+            </li>
+            <li>
+              <button type="button">Presentation</button>
+            </li>
+          </ul>
         </div>
-        <div class="autores">
-            <p> Site feito por: Lucas Morais - Marcos Vinícius - Douglas Balbino - João Victor - Adenilça Souza</p>
-            <p>Copyright &copy; Todos os direitos reservados</p>
+      </li>
+      <li>
+        <a href="./doug/comunity/comunity.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-people-group"></i>
+            <p>Comunidade</p>
+            <i class="ai-chevron-down-small"></i>
+          </button>
+        </a>
+        <div class="sub-menu">
+          <ul>
+            <li>
+              <button type="button">Avatar</button>
+            </li>
+            <li>
+              <button type="button">Theme</button>
+            </li>
+          </ul>
         </div>
-    </footer>
+      </li>
+      <li>
+        <a href="./user/historic/index.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-history"></i>
+            <p>Histórico</p>
+          </button>
+        </a>
+      </li>
+      <li>
+        <a href="./user/favorite-roads/index.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-heart"></i>
+            <p>Trilhas Favoritas</p>
+          </button>
+        </a>
+      </li>
+      <li>
+        <a href="./user/historic/index.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-statistic-up"></i>
+            <p>Progresso</p>
+          </button>
+        </a>
+      </li>
+      <li>
+        <a href="./doug/help/help-page.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-question"></i>
+            <p>Ajuda</p>
+          </button>
+        </a>
+      </li>
+      <li>
+        <button type="button" onclick="onClick(this)">
+          <i class="ai-circle-plus"></i>
+          <p>Feedback</p>
+        </button>
+      </li>
+      <li>
+        <button type="button" onclick="onClick(this)">
+          <i class="ai-language"></i>
+          <p>Idiomas</p>
+        </button>
+      </li>
+      <li>
+        <a href="./user-settings/user-information/index.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-gear"></i>
+            <p>Configurações</p>
+          </button>
+        </a>
+      </li>
+    </ul>
+  </aside>
+  <header>
+    <nav>
+      <ul class="nav flex">
+        <li class="nav-btn flex"><img id="showMenu" src="../img/logomarca-png.png" alt="Logomarca NexusStudium"
+            width="100px">
+        </li>
+        <li class="search-bar">
+          <div>
+            <form class="bg-search">
+              <button title="btn" class="search-button" type="submit"><i class="search-icon"><img
+                    src="../img/searchIcon.svg" alt=""></i></button>
+              <input class="search-input" type="text" placeholder="O que você quer aprender?">
+            </form>
+          </div>
+        </li>
+        <li class="button-header">
+          <div>
+            <button type="button" id="openModalBtn">login</button>
+            <button type="button">cadastre-se</button>
+          </div>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="grid-container">
+    <div class="container">
+      <div class="panel flex">
+        <h3 class="carrossel-title">Artigos</h3>
+        <p class="carrossel-sub">Aprenda através de textos feitos pela comunidade</p>
+      </div>
+      <div class="panel flex">
+        <h3 class="carrossel-title">Exercícios</h3>
+        <p class="carrossel-sub">Pratique seus conhecimentos através de exercícios</p>
 
-    <div id="myModal" class="modal">
-        <div class="modal-content flex">
-            <span class="close">x</span>
-            <img src="./img/logomarca-png.png" alt="Logomarca Nexus Studium" width="400">
-            <div class="bg-input flex">
-                <form class="space flex">
-                    <input type="text" id="input1" name="input1" placeholder="Email"><br><br>
-                    <input type="text" id="input2" name="input2" placeholder="Senha"><br><br>
-                    <button type="submit" class="btn-login"><a href="./login-page/index.html">Entrar</a></button>
-                    <div class="more-options">
-                        <button type="submit" class="btn-more">Entrar com Google</button>
-                        <button type="submit" class="btn-more">Entrar de outra forma</button>
-                    </div>
-                    <p class="forgot-password">Esqueci a senha</p>
-                </form>
-            </div>
-        </div>
+      </div>
+      <div class="panel flex active">
+        <h3 class="carrossel-title">Trilha</h3>
+        <p class="carrossel-sub">Se desenvolva através de um caminho pré-definido por profissionais experientes
+        </p>
+      </div>
+      <div class="panel flex">
+        <h3 class="carrossel-title">Comunidade</h3>
+        <p class="carrossel-sub">Retire suas dúvidas e expanda seus conhecimentos com auxilio de outros usuários
+        </p>
+
+      </div>
+      <div class="panel flex">
+        <h3 class="carrossel-title">Em alta</h3>
+        <p class="carrossel-sub">Busque os vídeos e trilhas mais vistos</p>
+
+      </div>
     </div>
 
-    <script src="./script.js"></script>
+    <aside class="topics">
+      <div class="gp-1">
+        <div class="topic-btn">ENEM</div>
+        <div class="topic-btn">Programação</div>
+        <div class="topic-btn">Gastronomia</div>
+      </div>
+      <div class="gp-2">
+        <div class="topic-btn">Arquitetura</div>
+        <div class="topic-btn">Direito</div>
+        <div class="topic-btn">Mecânica</div>
+      </div>
+      <div class="gp-3">
+        <div class="topic-btn">Engenharia</div>
+        <div class="topic-btn">Medicina</div>
+        <div class="topic-btn">Idiomas</div>
+      </div>
+    </aside>
+  </main>
+
+  <footer>
+    <div class="links">
+      <div class="help-footer">
+        <a href="#">Ajuda - Perguntas Frequentes</a>
+      </div>
+      <div class="payment-footer">
+        <a href="#">Formas de Pagamento</a>
+      </div>
+      <div class="social-media-footer">
+        <a href="#">Contatos e Redes Sociais</a>
+      </div>
+    </div>
+    <div class="autores">
+      <p> Site feito por: Lucas Morais - Marcos Vinícius - Douglas Balbino - João Victor - Adenilça Souza</p>
+      <p>Copyright &copy; Todos os direitos reservados</p>
+    </div>
+  </footer>
+
+  <div id="myModal" class="modal">
+    <div class="modal-content flex">
+      <span class="close">x</span>
+      <img src="./img/logomarca-png.png" alt="Logomarca Nexus Studium" width="400">
+      <div class="bg-input flex">
+        <form class="space flex">
+          <input type="text" id="input1" name="input1" placeholder="Email"><br><br>
+          <input type="text" id="input2" name="input2" placeholder="Senha"><br><br>
+          <button type="submit" class="btn-login"><a href="./login-page/index.html">Entrar</a></button>
+          <div class="more-options">
+            <button type="submit" class="btn-more">Entrar com Google</button>
+            <button type="submit" class="btn-more">Entrar de outra forma</button>
+          </div>
+          <p class="forgot-password">Esqueci a senha</p>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="./script.js"></script>
+  <script src="./sidebar/sidebar.js"></script>
 </body>
 
 </html>
