--- a/login-page/index.html
+++ b/login-page/index.html
@@ -5,18 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../sidebar/sidebar.css">
+    <link rel="icon" href="../img/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <script src="https://unpkg.com/akar-icons-fonts"></script>
     <title>Nexus Studium</title>
-</head>
-
-<body>
+  </head>
+  
+  <body>
     <header>
-        <nav>
-            <ul class="nav flex">
-                <li class="nav-btn flex"><img src="../img/logomarca-png.png" alt="Logomarca NexusStudium" width="100px">
-                </li>
+      <nav>
+        <ul class="nav flex">
+          <li class="nav-btn flex"><img id="showMenu" src="../img/logomarca-png.png" alt="Logomarca NexusStudium"
+              width="100px">
+          </li>
                 <li class="search-bar">
                     <div>
                         <form class="bg-search">
@@ -37,6 +48,142 @@
         </nav>
     </header>
 
+    <aside class="sidebar ocult-sidebar">
+      <header class="flex">
+        <img src="../img/logomarca-png.png" width="150px" height="150px" />
+      </header>
+      <ul>
+        <li>
+          <a href="#"><button type="button" onclick="onClick(this)">
+              <i class="ai-home-alt1"></i>
+              <p>Início</p>
+            </button></a>
+        </li>
+        <li>
+          <a href="../user/who-follow/index.html">
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-person-check"></i>
+              <p>Quem eu sigo</p>
+            </button>
+          </a>
+        </li>
+        <li>
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-book-open"></i>
+            <p>Artigos</p>
+            <i class="ai-chevron-down-small"></i>
+          </button>
+          <div class="sub-menu">
+            <ul>
+              <li>
+                <button type="button">Display</button>
+              </li>
+              <li>
+                <button type="button">Appearance</button>
+              </li>
+              <li>
+                <button type="button">Preferences</button>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-folder-add"></i>
+            <p>Exercícios</p>
+            <i class="ai-chevron-down-small"></i>
+          </button>
+          <div class="sub-menu">
+            <ul>
+              <li>
+                <button type="button">Article</button>
+              </li>
+              <li>
+                <button type="button">Document</button>
+              </li>
+              <li>
+                <button type="button">Video</button>
+              </li>
+              <li>
+                <button type="button">Presentation</button>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <a href="../doug/comunity/comunity.html">
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-people-group"></i>
+              <p>Comunidade</p>
+              <i class="ai-chevron-down-small"></i>
+            </button>
+          </a>
+          <div class="sub-menu">
+            <ul>
+              <li>
+                <button type="button">Avatar</button>
+              </li>
+              <li>
+                <button type="button">Theme</button>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <a href="../user/historic/index.html">
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-history"></i>
+              <p>Histórico</p>
+            </button>
+          </a>
+        </li>
+        <li>
+          <a href="../user/favorite-roads/index.html">
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-heart"></i>
+              <p>Trilhas Favoritas</p>
+            </button>
+          </a>
+        </li>
+        <li>
+          <a href="../user/historic/index.html">
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-statistic-up"></i>
+              <p>Progresso</p>
+            </button>
+          </a>
+        </li>
+        <li>
+          <a href="./doug/help/help-page.html">
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-question"></i>
+              <p>Ajuda</p>
+            </button>
+          </a>
+        </li>
+        <li>
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-circle-plus"></i>
+            <p>Feedback</p>
+          </button>
+        </li>
+        <li>
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-language"></i>
+            <p>Idiomas</p>
+          </button>
+        </li>
+        <li>
+          <a href="../user-settings/user-information/index.html">
+            <button type="button" onclick="onClick(this)">
+              <i class="ai-gear"></i>
+              <p>Configurações</p>
+            </button>
+          </a>
+        </li>
+      </ul>
+    </aside>
+    <script src="./sidebar.js"></script>
     <main class="grid-container">
         <div class="container">
             <div class="panel flex active">
@@ -69,7 +216,7 @@
 
         <aside class="topics">
             <div class="gp-1">
-                <div><a class="topic-btn" href="./topics.html">ENEM</a></div>
+                <div><a class="topic-btn" href="">ENEM</a></div>
                 <div><a class="topic-btn" href="">Arquitetura</a></div>
                 <div><a class="topic-btn" href="">Gastronomia</a></div>
             </div>
@@ -101,8 +248,10 @@
             <p> Site feito por: Lucas Morais - Marcos Vinícius - Douglas Balbino - João Victor - Adenilça Souza</p>
             <p>Copyright &copy; Todos os direitos reservados</p>
         </div>
+        
 
         <script src="../script.js"></script>
+        <script src="../sidebar/sidebar.js"></script>
     </footer>
 </body>
 
