--- a/index.html
+++ b/index.html
@@ -34,88 +34,53 @@
           </button></a>
       </li>
       <li>
-        <a href="./user/who-follow/index.html">
+        <button type="button" onclick="onClick(this)">
+          <i class="ai-person-check"></i>
+          <p>Perfil</p>
+          <i class="ai-chevron-down-small"></i>
+        </button>
+        <div class="sub-menu">
+          <ul>
+            <li>
+              <a href="./user/historic/index.html">
+                <button type="button">Histórico</button>
+              </a>
+            </li>
+            <li>
+              <a href="./user/who-follow/index.html">
+                <button type="button">Quem eu sigo</button>
+              </a>
+            </li>
+            <li>
+              <a href="./user/favorite-roads/index.html">
+                <button type="button">Trilhas favoritas</button>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </li>
+
+      <li> <!-- ============= MARCOS =============== -->
+        <a href="./doug/article/article.html">
           <button type="button" onclick="onClick(this)">
-            <i class="ai-person-check"></i>
-            <p>Quem eu sigo</p>
+            <i class="ai-book-open"></i>
+            <p>Artigos</p>
           </button>
         </a>
       </li>
       <li>
-        <button type="button" onclick="onClick(this)">
-          <i class="ai-book-open"></i>
-          <p>Artigos</p>
-          <i class="ai-chevron-down-small"></i>
-        </button>
-        <div class="sub-menu">
-          <ul>
-            <li>
-              <button type="button">Display</button>
-            </li>
-            <li>
-              <button type="button">Appearance</button>
-            </li>
-            <li>
-              <button type="button">Preferences</button>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li>
-        <button type="button" onclick="onClick(this)">
-          <i class="ai-folder-add"></i>
-          <p>Exercícios</p>
-          <i class="ai-chevron-down-small"></i>
-        </button>
-        <div class="sub-menu">
-          <ul>
-            <li>
-              <button type="button">Article</button>
-            </li>
-            <li>
-              <button type="button">Document</button>
-            </li>
-            <li>
-              <button type="button">Video</button>
-            </li>
-            <li>
-              <button type="button">Presentation</button>
-            </li>
-          </ul>
-        </div>
+        <a href="./doug/exercises/exercises.html">
+          <button type="button" onclick="onClick(this)">
+            <i class="ai-folder-add"></i>
+            <p>Exercícios</p>
+          </button>
+        </a>
       </li>
       <li>
         <a href="./doug/comunity/comunity.html">
           <button type="button" onclick="onClick(this)">
             <i class="ai-people-group"></i>
             <p>Comunidade</p>
-            <i class="ai-chevron-down-small"></i>
-          </button>
-        </a>
-        <div class="sub-menu">
-          <ul>
-            <li>
-              <button type="button">Avatar</button>
-            </li>
-            <li>
-              <button type="button">Theme</button>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li>
-        <a href="./user/historic/index.html">
-          <button type="button" onclick="onClick(this)">
-            <i class="ai-history"></i>
-            <p>Histórico</p>
-          </button>
-        </a>
-      </li>
-      <li>
-        <a href="./user/favorite-roads/index.html">
-          <button type="button" onclick="onClick(this)">
-            <i class="ai-heart"></i>
-            <p>Trilhas Favoritas</p>
           </button>
         </a>
       </li>
@@ -128,18 +93,36 @@
         </a>
       </li>
       <li>
-        <a href="./doug/help/help-page.html">
-          <button type="button" onclick="onClick(this)">
-            <i class="ai-question"></i>
-            <p>Ajuda</p>
-          </button>
-        </a>
-      </li>
-      <li>
         <button type="button" onclick="onClick(this)">
-          <i class="ai-circle-plus"></i>
-          <p>Feedback</p>
+          <i class="ai-question"></i>
+          <p>Ajuda</p>
+          <i class="ai-chevron-down-small"></i>
+
         </button>
+        <div class="sub-menu">
+          <ul>
+            <li>
+              <a href="./doug/help/help-page.html">
+                <button type="button">Perguntas Frequentes</button>
+              </a>
+            </li>
+            <li>
+              <a href="./doug/help/help-page.html">
+                <button type="button">Sobre</button>
+              </a>
+            </li>
+            <li>
+              <a href="./doug/help/help-page.html">
+                <button type="button">Feedback</button>
+              </a>
+            </li>
+            <li>
+              <a href="./doug/help/help-page.html">
+                <button type="button">Suporte</button>
+              </a>
+            </li>
+          </ul>
+        </div>
       </li>
       <li>
         <button type="button" onclick="onClick(this)">
@@ -157,7 +140,7 @@
       </li>
     </ul>
   </aside>
-  
+
   <header>
     <nav>
       <ul class="nav flex">
@@ -173,11 +156,10 @@
             </form>
           </div>
         </li>
-        <li class="user-button">
+        <li class="button-header">
+          <button>login</button>
+          <button>cadastre-se</button>
           <a href="../user/historic/index.html">
-            <div class="flex user-page">
-              <i class="fa-solid fa-user fa-2x"></i>
-            </div>
           </a>
         </li>
       </ul>
@@ -186,7 +168,7 @@
 
   <main class="grid-container">
     <div class="container">
-        
+
       <div class="panel flex active">
         <h3 class="carrossel-title">Trilha</h3>
         <p class="carrossel-sub">Se desenvolva através de um caminho pré-definido por profissionais experientes
